// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <GifGrid /> Es mostra correctament 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Test
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Test <GifGrid /> Ha de mostrar items quan es carreguen imatges amb useFetchGif 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    Test
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Qualsevol Títol"
      url="https://localhost/img/imgExemple.gif"
    />
  </div>
</Fragment>
`;
